--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>La canchita</title>
+        <title>Futcenter admin</title>
         <base href="/">
         <script src="https://use.fontawesome.com/08da207896.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
